@@ -11,7 +11,7 @@
 		<flag name="epydoc">Build html API documentation with epydoc.</flag>
 		<flag name="ipc">Use inter-process communication between portage and running ebuilds.</flag>
 		<flag name="less">Pull in sys-apps/less as default pager for etc-update.</flag>
-		<flag name="pypy1_8">Use pypy-c1.8 as Python interpreter.</flag>
+		<flag name="pypy1_9">Use pypy-c1.9 as Python interpreter.</flag>
 		<flag name="python2">Use python2 as Python interpreter.</flag>
 		<flag name="python3">Use python3 as Python interpreter.</flag>
 	</use>
