@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1032 2012/06/06 02:53:38 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1033 2012/06/13 06:11:55 zmedico Exp $
+
+  13 Jun 2012; Zac Medico <zmedico@gentoo.org> metadata.xml,
+  portage-2.1.10.49.ebuild, portage-2.1.10.65.ebuild,
+  portage-2.2.0_alpha110.ebuild, portage-2.2.0_alpha89.ebuild,
+  portage-9999.ebuild:
+  Replace USE=pypy1_8 with pypy1_9.
 
   06 Jun 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.64.ebuild,
   -portage-2.2.0_alpha109.ebuild:
